@@ -187,6 +187,10 @@ translated buttons.</P>
 	<TD>Export Printers to Samba</TD>
 </TR>
 <TR>
+	<TD>button-find-new-printers.gif</TD>
+	<TD>Find New Printers</TD>
+</TR>
+<TR>
 	<TD>button-help.gif</TD>
 	<TD>Help</TD>
 </TR>
@@ -556,6 +560,10 @@ translated all of the templates, add the locale to the
 	jobs list.</TD>
 </TR>
 <TR>
+	<TD>list-available-printers.tmpl</TD>
+	<TD>This template shows a list of new printers that have been found.</TD>
+</TR>
+<TR>
 	<TD>maintenance.tmpl</TD>
 	<TD>This template shows "maintenance commands sent".</TD>
 </TR>
@@ -915,6 +923,10 @@ supported <CODE>OP</CODE> values.</P>
 <TR>
 	<TD>export-samba</TD>
 	<TD>Exports printers to Samba.</TD>
+</TR>
+<TR>
+	<TD>find-new-printers</TD>
+	<TD>Find new printers that have not yet been added.</TD>
 </TR>
 <TR>
 	<TD>modify-class</TD>
