@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.1
 
+	- Fixed the localization instructions and German template for
+	  the "Find New Printers" button (STR #2478)
 	- The web interface did not work with the Chinese localization
 	  (STR #2477)
 	- The web interface home page did not work for languages that
